# Puzzler

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Controllers/: databasecontroller.cpp  databasecontroller.h  gamecontroller.cpp  gamecontroller.h  gameresultcontroller.cpp  gameresultcontroller.h  hintscontroller.cpp  hintscontroller.h  usercontroller.cpp  usercontroller.h
Models/: gameresulttabledto.cpp  gameresulttabledto.h
Models/Entities/: gameresult.cpp  gameresult.h  user.cpp  user.h
Models/Hints/: basehint.h  datehint.cpp  datehint.h  texthint.cpp  texthint.h
Models/Repositories/: baserepository.h  gameresultrepository.cpp  gameresultrepository.h  userrepository.cpp  userrepository.h
